samples/_failures_safe/1761350896_45699f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ab6a3e0c.c: In function ‘main’:
./samples/SAFE/__tmp_ab6a3e0c.c:177:5: error: expected declaration or statement at end of input
  177 |     int max_edges = node_count * (node_count - 1) / 2;
      |     ^~~
